--- a/.env.local
+++ b/.env.local
@@ -26,6 +26,7 @@ S3_BUCKET_NAME=local-bucket
 SFN_ENDPOINT=http://localhost:8083
 SFN_REGION=ap-northeast-1
 SFN_COMMAND_ARN=arn:aws:states:ap-northeast-1:101010101010:stateMachine:command
+SFN_TASK_ARN=arn:aws:states:ap-northeast-1:101010101010:stateMachine:task-processing
 # SNS endpoint, useful for local development
 SNS_ENDPOINT=http://localhost:4002
 SNS_REGION=ap-northeast-1
@@ -54,4 +55,6 @@ SES_FROM_EMAIL=email@example.com
 DATABASE_URL="mysql://root:RootCqrs@localhost:3306/cqrs?schema=public&connection_limit=1"
 
 # serverless dynamodb local stream
-LOCAL_DDB_SAMPLE_STREAM=arn:aws:dynamodb:ddblocal:000000000000:table/local-test-cli-sample-command/stream/2025-01-14T12:05:57.881
+
+LOCAL_DDB_SAMPLE_STREAM=arn:aws:dynamodb:ddblocal:000000000000:table/local-task-sfn-interation-map-sample-command/stream/2025-01-22T07:51:49.100
+LOCAL_DDB_TASKS_STREAM=arn:aws:dynamodb:ddblocal:000000000000:table/local-task-sfn-interation-map-tasks/stream/2025-01-22T07:51:49.146
