--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@mbc-cqrs-serverless/core": "^0.1.52-beta.0",
+    "@mbc-cqrs-serverless/task": "^0.1.52-beta.0",
     "@prisma/client": "^5.7.1",
     "prisma": "^5.7.1"
   },
