device parent into sub task:

--- a/.env.local
+++ b/.env.local
@@ -53,6 +53,8 @@ SES_FROM_EMAIL=email@example.com
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:RootCqrs@localhost:3306/cqrs?schema=public&connection_limit=1"
+SFN_CSV_IMPORT_ARN=arn:aws:states:ap-northeast-1:101010101010:stateMachine:csv-import
+SFN_EMPLOYEE_IMPORT_ARN=arn:aws:states:ap-northeast-1:101010101010:stateMachine:employee-import
 
 # serverless dynamodb local stream
 
