--- a/infra-local/serverless.yml
+++ b/infra-local/serverless.yml
@@ -356,7 +356,38 @@ stepFunctions:
                 BackoffRate: 2
             OutputPath: $.Payload[0][0]
             Next: success
-
+    employee-import:
+      name: employee-import
+      definition:
+        Comment: 'An example of the Amazon States Language using wait states'
+        StartAt: map
+        States:
+          map:
+            Type: Map
+            MaxConcurrency: 2
+            ItemsPath: $
+            Iterator:
+              StartAt: bulk_upload_employee
+              States:
+                bulk_upload_employee:
+                  Type: Task
+                  Resource: arn:aws:states:::lambda:invoke
+                  Parameters:
+                    FunctionName: arn:aws:lambda:ap-northeast-1:101010101010:function:serverless-example-dev-main
+                    Payload:
+                      input.$: $
+                      context.$: $$
+                  Retry:
+                    - ErrorEquals:
+                        - Lambda.ServiceException
+                        - Lambda.AWSLambdaException
+                        - Lambda.SdkClientException
+                      IntervalSeconds: 2
+                      MaxAttempts: 5
+                      BackoffRate: 2
+                  End: true
+            End: true
+            # MaxConcurrency: 2
 resources:
   Resources:
     TaskActionQueue:
