--- a/.env.local
+++ b/.env.local
@@ -55,6 +55,7 @@ SES_FROM_EMAIL=email@example.com
 DATABASE_URL="mysql://root:RootCqrs@localhost:3306/cqrs?schema=public&connection_limit=1"
 SFN_CSV_IMPORT_ARN=arn:aws:states:ap-northeast-1:101010101010:stateMachine:csv-import
 SFN_EMPLOYEE_IMPORT_ARN=arn:aws:states:ap-northeast-1:101010101010:stateMachine:employee-import
+SFN_TASK_ARN=arn:aws:states:ap-northeast-1:101010101010:stateMachine:sfn-task
 
 # serverless dynamodb local stream
 
